# ai-agent-platform

./: .env.template  .gitignore  CLAUDE_CODE_SESSION_HANDOFF.md  CRITICAL_PROBLEMS_HANDOVER.md  PROJECT_CHARTER.md  PROJECT_OVERVIEW_AND_STATUS.md  PROJECT_ROADMAP_AND_FIXES.md  README.md  dato_ahmad_excel_integration.py  enhanced_chat_integration.py  excel_agent_demo.py  excel_to_database_system.py  finance_manager_demo.py  frontend_simulation_test.py  manual_excel_reader.py  openpyxl_analyzer.py  pyproject.toml  real_excel_analyzer.py  real_excel_chat_system.py  test_chat_interface.py  test_excel_db_system.py  test_web_upload.html
.claude/: .mcp.json  settings.local.json
.github/workflows/: ci.yml
archive/: ARCHIVE_INDEX.md  SESSION_SUMMARY.md
archive/config_files/: alembic.ini
archive/demos/: demo_server.py  excel_agent_demo.py  finance_manager_demo.py
archive/diagnostics/: PROBLEMATIC_CODE_LOCATIONS.md  REAL_SYSTEM_STATUS.md
archive/session_history/: analyze_your_excel.py  complete_chat_integration.py  excel_to_database_system.py  install_excel_tools.py  process_excel_file.py  quick_excel_processor.py  test_fixed_upload.py  test_real_system_offline.py
docs/: PLATFORM_ARCHITECTURE.md
migrations/: env.py  script.py.mako
src/ai_agent_platform/: __init__.py  config.py  logging_config.py  main.py
src/ai_agent_platform/api/: __init__.py  agents.py  rag.py  schemas.py  tools.py
src/ai_agent_platform/core/: __init__.py  agent_factory.py
src/ai_agent_platform/database/: __init__.py  connection.py
src/ai_agent_platform/execution/: __init__.py  engine.py
src/ai_agent_platform/llm/: providers.py
src/ai_agent_platform/memory/: __init__.py  context.py
src/ai_agent_platform/models/: __init__.py  agent.py  base.py
src/ai_agent_platform/rag/: __init__.py  vector_store.py
src/ai_agent_platform/tools/: __init__.py  registry.py
tests/: test_basic.py  test_config.py  test_finance_endpoints.py  test_models.py
tests/integration/: __init__.py  conftest.py  test_agent_execution.py  test_api_endpoints.py  test_full_system.py  test_lm_studio_integration.py
